<resources>
    <string name="app_name" translatable="false">MedicNet</string>
    <string name="title_sign_in_your_server">Sign in to your server</string>
    <string name="title_log_in">Log in</string>
    <string name="title_register_username">Register username</string>
    <string name="title_reset_password">Reset password</string>
    <string name="title_sign_up">Sign up</string>
    <string name="title_authentication">Authentication</string>
    <string name="title_legal_terms">Legal Terms</string>
    <string name="title_chats">Chats</string>
    <string name="title_profile">Profile</string>
    <string name="title_members">Members (%d)</string>
    <string name="title_settings">Settings</string>
    <string name="title_password">Change Password</string>
    <string name="title_update_profile">Update profile</string>
    <string name="title_about">About</string>
    <string name="action_connect">Connect</string>
    <string name="action_use_this_username">Use this username</string>
    <string name="action_login_or_sign_up">Tap this button to log in or create an account</string>
    <string name="action_terms_of_service">Terms of Service</string>
    <string name="action_privacy_policy">Privacy Policy</string>
    <string name="action_search">Search</string>
    <string name="action_update">Update</string>
    <string name="action_settings">Settings</string>
    <string name="action_logout">Logout</string>
    <string name="action_files">Files</string>
    <string name="action_confirm_password">Confirm Password Change</string>
    <string name="action_join_chat">Join Chat</string>
    <string name="action_add_account">Add account</string>
    <string name="action_online">Online</string>
    <string name="action_away">Away</string>
    <string name="action_busy">Busy</string>
    <string name="action_invisible">Invisible</string>
    <string-array name="settings_actions">
        <item name="item_password">Change Password</item>
        <item name="item_password">About</item>
    </string-array>
    <string name="msg_generic_error">Sorry, an error has occurred, please try again</string>
    <string name="msg_no_data_to_display">No data to display</string>
    <string name="msg_profile_update_successfully">Profile update successfully</string>
    <string name="msg_username">username</string>
    <string name="msg_username_or_email">NHS.net email address</string>
    <string name="msg_password">NHS.net password</string>
    <string name="msg_name">name</string>
    <string name="msg_email">email</string>
    <string name="msg_avatar_url">avatar URL</string>
    <string name="msg_or_continue_using_social_accounts">Or continue using social accounts</string>
    <string name="msg_new_user">New user? %1$s</string>
    <string name="msg_forgot_password">Forgot password? %1$s</string>
    <string name="msg_reset">Reset</string>
    <string name="msg_check_your_email_to_reset_your_password">Email sent! Check your inbox to reset your password.</string>
    <string name="msg_invalid_email">Please type a valid e-mail</string>
    <string name="msg_new_user_agreement">By proceeding you are agreeing to our\n%1$s and %2$s</string>
    <string name="msg_2fa_code">2FA Code</string>
    <string name="msg_more_than_ninety_nine_unread_messages" translatable="false">99+</string>
    <string name="msg_yesterday">Yesterday</string>
    <string name="msg_message">Message</string>
    <string name="msg_this_room_is_read_only">This room is read only</string>
    <string name="msg_invalid_2fa_code">Invalid 2FA Code</string>
    <string name="msg_invalid_file">Invalid file</string>
    <string name="msg_invalid_server_url">Invalid server URL</string>
    <string name="msg_content_description_log_in_using_facebook">Login using Facebook</string>
    <string name="msg_content_description_log_in_using_github">Login using Github</string>
    <string name="msg_content_description_log_in_using_google">Login using Google</string>
    <string name="msg_content_description_log_in_using_linkedin">Login using Linkedin</string>
    <string name="msg_content_description_log_in_using_meteor">Login using Meteor</string>
    <string name="msg_content_description_log_in_using_twitter">Login using Twitter</string>
    <string name="msg_content_description_log_in_using_gitlab">Login using Gitlab</string>
    <string name="msg_content_description_send_message">Send message</string>
    <string name="msg_content_description_show_attachment_options">Show attachment options</string>
    <string name="msg_you">You</string>
    <string name="msg_unknown">Unknown</string>
    <string name="msg_email_address">E-mail address</string>
    <string name="msg_utc_offset">UTC offset</string>
    <string name="msg_new_password">Enter New Password</string>
    <string name="msg_confirm_password">Confirm New Password</string>
    <string name="msg_unread_messages">Unread messages</string>
    <string name="msg_preview_video">Video</string>
    <string name="msg_preview_audio">Audio</string>
    <string name="msg_preview_photo">Photo</string>
    <string name="msg_preview_file">File</string>
    <string name="msg_no_messages_yet">No messages yet</string>
    <string name="msg_version">Version %1$s</string>
    <string name="msg_build">Build %1$d</string>
    <string name="msg_ok">OK</string>
    <string name="msg_update_app_version_in_order_to_continue">Out to date server version. Please contact the server admin to update the server version in order to continue.</string>
    <string name="msg_ver_not_recommended">
        Looks like your server version is below the recommended version %1$s.\nYou can still login but you may experience unexpected behaviors.</string>
    <string name="msg_ver_not_minimum">
        Looks like your server version is below the minimum required version %1$s.\nPlease upgrade your server to login!
    </string>
    <string name="msg_no_chat_title">No chat messages</string>
    <string name="msg_no_chat_description">Start conversing to see your\nmessages here.</string>
    <string name="msg_proceed">PROCEED</string>
    <string name="msg_cancel">CANCEL</string>
    <string name="msg_warning">WARNING</string>
    <string name="msg_http_insecure">When using HTTP, you\'re connecting to an insecure server. We don\'t recommend you doing that.</string>
    <string name="msg_error_checking_server_version">An error has occurred while checking your server version, please try again</string>
    <string name="msg_invalid_server_protocol">The selected protocol is not accepted by this server, try using HTTPS</string>
    <string name="msg_image_saved_successfully">Image has been saved to gallery</string>
    <string name="msg_image_saved_failed">Failed to save image</string>
    <string name="msg_edited">(edited)</string>
    <string name="msg_and">\u0020and\u0020</string>
    <string name="msg_is_typing">\u0020is typing…</string>
    <string name="msg_are_typing">\u0020are typing…</string>
    <string name="msg_several_users_are_typing">Several users are typing…</string>
    <string name="msg_no_search_found">No result found</string>
    <string name="message_room_name_changed">Room name changed to: %1$s by %2$s</string>
    <string name="message_user_added_by">User %1$s added by %2$s</string>
    <string name="message_user_removed_by">User %1$s removed by %2$s</string>
    <string name="message_user_left">Has left the channel.</string>
    <string name="message_user_joined_channel">Has joined the channel.</string>
    <string name="message_welcome">Welcome %s</string>
    <string name="message_removed">Message removed</string>
    <string name="message_pinned">Pinned a message:</string>
    <string name="message_muted">User %1$s muted by %2$s</string>
    <string name="message_unmuted">User %1$s unmuted by %2$s</string>
    <string name="message_role_add">%1$s was set %2$s by %3$s</string>
    <string name="message_role_removed">%1$s is no longer %2$s by %3$s</string>
    <string name="action_msg_reply">Reply</string>
    <string name="action_msg_edit">Edit</string>
    <string name="action_msg_copy">Copy</string>
    <string name="action_msg_quote">Quote</string>
    <string name="action_msg_delete">Delete</string>
    <string name="action_msg_pin">Pin Message</string>
    <string name="action_msg_unpin">Unpin Message</string>
    <string name="action_msg_star">Star Message</string>
    <string name="action_msg_unstar">Unstar Message</string>
    <string name="action_msg_share">Share</string>
    <string name="action_title_editing">Editing Message</string>
    <string name="action_msg_add_reaction">Add reaction</string>
    <string name="permission_editing_not_allowed">Editing is not allowed</string>
    <string name="permission_deleting_not_allowed">Deleting is not allowed</string>
    <string name="permission_pinning_not_allowed">Pinning is not allowed</string>
    <string name="permission_starring_not_allowed">Starring is not allowed</string>
    <string name="title_members_list">Members List</string>
    <string name="title_pinned_messages">Pinned Messages</string>
    <string name="no_pinned_messages">No pinned messages</string>
    <string name="no_pinned_description">All the pinned messages\nappear here</string>
    <string name="title_favorite_messages">Favorite Messages</string>
    <string name="no_favorite_messages">No favorite messages</string>
    <string name="no_favorite_description">All the favorite messages\nappear here</string>
    <string name="max_file_size_exceeded">File size %1$d bytes exceeded max upload size of %2$d bytes</string>
    <string name="status_connected">Connected</string>
    <string name="status_disconnected">Disconnected</string>
    <string name="status_connecting">Connecting</string>
    <string name="status_authenticating">Authenticating</string>
    <string name="status_disconnecting">Disconnecting</string>
    <string name="status_waiting">Connecting in %d seconds</string>
    <string name="suggest_all_description">Notify all in this room</string>
    <string name="suggest_here_description">Notify active users in this room</string>
    <string name="Slash_Gimme_Description">Displays ༼ つ ◕_◕ ༽つ before your message</string>
    <string name="Slash_LennyFace_Description">Displays ( ͡° ͜ʖ ͡°) after your message</string>
    <string name="Slash_Shrug_Description">Displays ¯\_(ツ)_/¯ after your message</string>
    <string name="Slash_Tableflip_Description">Displays (╯°□°）╯︵ ┻━┻</string>
    <string name="Slash_TableUnflip_Description">Displays ┬─┬ ノ( ゜-゜ノ)</string>
    <string name="Create_A_New_Channel">Create a new channel</string>
    <string name="Show_the_keyboard_shortcut_list">Show the keyboard shortcut list</string>
    <string name="Invite_user_to_join_channel_all_from">Invite all users from [#channel] to join this channel</string>
    <string name="Invite_user_to_join_channel_all_to">Invite all users from this channel to join [#channel]</string>
    <string name="Archive">Archive</string>
    <string name="Remove_someone_from_room">Remove someone from the room</string>
    <string name="Leave_the_current_channel">Leave the current channel</string>
    <string name="Displays_action_text">Displays action text</string>
    <string name="label_contact" translatable="false">Contact</string>
    <string name="label_new_team" translatable="false">New Team</string>
    <string name="label_firstname" translatable="false">First Name</string>
    <string name="label_surname" translatable="false">Surname</string>
    <string name="label_select_role" translatable="false">Select Role</string>
    <string name="label_select_organization" translatable="false">Select Organisation</string>
    <string name="label_signup_warning_nhs" translatable="false">This app is integrated with NHS.net.\nYou can login with your NHS.net email address and password:</string>
    <string name="btn_register" translatable="false">Register</string>
</resources>