<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    tools:context=".authentication.signup.ui.SignupFragment"
    android:background="@drawable/main_bg">

    <include
        android:id="@+id/layout_app_bar"
        layout="@layout/medicnet_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/layout_app_bar"
        android:layout_marginTop="32dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingLeft="@dimen/padding_left_right_signup"
            android:paddingRight="@dimen/padding_left_right_signup">

            <EditText
                android:id="@+id/text_name"
                style="@style/Authentication.EditText"
                android:layout_marginTop="@dimen/signup_component_margin_top"
                android:hint="@string/label_firstname"
                android:imeOptions="actionNext"
                android:inputType="textCapWords" />

            <EditText
                android:id="@+id/text_username"
                style="@style/Authentication.EditText"
                android:layout_marginTop="@dimen/signup_component_margin_top"
                android:hint="@string/label_surname"
                android:imeOptions="actionNext"
                android:inputType="text" />

            <RelativeLayout
                android:id="@+id/select_role"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_component_margin_top"
                android:background="@drawable/style_edit_text_authentication"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:fontFamily="@font/font_roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/label_select_role"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ico_next" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/select_organisation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_component_margin_top"
                android:background="@drawable/style_edit_text_authentication"
                android:paddingLeft="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="50dp"
                    android:fontFamily="@font/font_roboto_medium"
                    android:gravity="center_vertical"
                    android:text="@string/label_select_organization"
                    android:textColor="@color/black"
                    android:textSize="16sp" />

                <ImageView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:src="@drawable/ico_next" />
            </RelativeLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:fontFamily="@font/font_roboto_regular"
                android:textSize="16sp"
                android:text="@string/label_signup_warning_nhs"
                android:textColor="@color/red_medium"
                android:layout_marginTop="@dimen/signup_component_margin_top" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_component_margin_top"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView1"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/green_light"
                    android:src="@drawable/ic_email_black_24dp" />

                <EditText
                    android:id="@+id/text_password"
                    style="@style/Authentication.EditText"
                    android:hint="@string/msg_password"
                    android:imeOptions="actionNext"
                    android:inputType="textPassword" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/signup_component_margin_top"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/imageView8"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@color/green_light"
                    android:src="@drawable/ic_lock_black_24dp" />

                <EditText
                    android:id="@+id/text_email"
                    style="@style/Authentication.EditText"
                    android:hint="@string/msg_email"
                    android:imeOptions="actionDone"
                    android:inputType="textEmailAddress" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

    <com.wang.avi.AVLoadingIndicatorView
        android:id="@+id/view_loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/scroll_view"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:indicatorName="BallPulseIndicator"
        tools:visibility="visible" />

    <LinearLayout
        android:id="@+id/bottom_container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:paddingLeft="@dimen/padding_left_right_signup"
        android:paddingRight="@dimen/padding_left_right_signup"
        android:layout_marginBottom="20dp">

        <TextView
            android:id="@+id/text_new_user_agreement"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="@dimen/screen_edge_left_and_right_margins"
            android:gravity="center"
            android:textColorLink="@color/colorAccent"
            android:visibility="gone" />

        <Button
            android:id="@+id/button_sign_up"
            style="@style/Authentication.Button"
            android:text="@string/btn_register"
            android:fontFamily="@font/font_roboto_medium"
            android:textSize="@dimen/text_size_login" />
    </LinearLayout>

</RelativeLayout>