<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:background="@color/dark_gray">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/composer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/colorDividerMessageComposer" />

        <TextView
            android:id="@+id/text_room_is_read_only"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:gravity="center"
            android:text="@string/msg_this_room_is_read_only"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <Button
            android:id="@+id/button_join_chat"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:background="@color/white"
            android:text="@string/action_join_chat"
            android:textColor="@color/colorAccent"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/divider" />

        <LinearLayout
            android:id="@+id/input_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:orientation="horizontal"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            app:layout_constraintTop_toBottomOf="@+id/divider">

            <ImageButton
                android:id="@+id/button_add_reaction"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:layout_marginEnd="16dp"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/msg_content_description_show_attachment_options"
                android:src="@drawable/ic_reaction_24dp"
                android:visibility="gone" />

            <ImageButton
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_add_photo_to_message"
                android:scaleType="centerInside"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="10dp"
                android:id="@+id/button_show_attachment_options"
                android:background="?attr/selectableItemBackgroundBorderless" />
            <com.medicnet.android.widget.emoji.ComposerEditText
                android:id="@+id/text_message"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginEnd="16dp"
                android:layout_weight="1"
                android:background="@drawable/style_edit_text_authentication"
                android:hint="@string/msg_message"
                android:inputType="textCapSentences|textMultiLine"
                android:lineSpacingExtra="4dp"
                android:maxLines="4"
                android:minHeight="30dp"
                android:scrollbars="vertical" />

            <!--<ImageButton
                android:id="@+id/button_show_attachment_options"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_gravity="bottom"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/msg_content_description_show_attachment_options"
                android:src="@drawable/ic_add_24dp" />-->

            <ImageButton
                android:id="@+id/button_send"
                android:layout_width="45dp"
                android:layout_height="45dp"
                android:layout_gravity="bottom"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/msg_content_description_send_message"
                android:src="@drawable/btn_msg_send"
                android:visibility="gone"
                android:scaleType="centerInside"
                tools:visibility="visible" />
        </LinearLayout>

    </android.support.constraint.ConstraintLayout>

    <FrameLayout
        android:id="@+id/emoji_fragment_placeholder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>