<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/nav_medicnet_header_image"
            android:layout_height="@dimen/nav_medicnet_header_image"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_launcher_foreground" />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/imageView"
            app:layout_constraintEnd_toEndOf="@+id/imageView"
            app:srcCompat="@drawable/ic_status_online_12dp" />

        <LinearLayout
            android:id="@+id/layoutSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintRight_toLeftOf="@+id/layoutAddContact"
            app:layout_constraintTop_toTopOf="@+id/imageView"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="@dimen/nav_medicnet_header_image"
                android:layout_height="@dimen/nav_medicnet_header_image"
                app:srcCompat="@drawable/ic_search_gray_24px" />

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_search" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAddContact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintRight_toLeftOf="@+id/layoutAddTeam"
            app:layout_constraintTop_toTopOf="@+id/layoutSearch"
            android:layout_marginRight="10dp">

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="@dimen/nav_medicnet_header_image"
                android:layout_height="@dimen/nav_medicnet_header_image"
                app:srcCompat="@drawable/ic_email_black_24dp" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_contact" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layoutAddTeam"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@+id/layoutSearch">

            <ImageView
                android:id="@+id/imageView5"
                android:layout_width="@dimen/nav_medicnet_header_image"
                android:layout_height="@dimen/nav_medicnet_header_image"
                app:srcCompat="@drawable/ic_add_24dp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/label_new_team" />
        </LinearLayout>
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>
